--- a/templates/edit_entry.html
+++ b/templates/edit_entry.html
@@ -80,7 +80,7 @@
   <nav class="ts-nav-container">
         <div class="ts-nav-center">
           <a href="/timesheet_home" class="ts-nav-link">Timesheet</a>
-          <a href="/fill_timesheet" class="ts-nav-link">Fill Timesheet</a>\
+          <a href="/fill_timesheet" class="ts-nav-link">Fill Timesheet</a>
            <a href="/view_summary" class="ts-nav-link">View Summery</a>
         <a class="ts-nav-link" href="{{ url_for('view_entries_by_date', date=entry.date) }}">Entries for {{ entry.date }}
     </a>
