--- a/templates/view_entries_by_date.html
+++ b/templates/view_entries_by_date.html
@@ -15,7 +15,7 @@
   <nav class="ts-nav-container">
         <div class="ts-nav-center">
           <a href="/timesheet_home" class="ts-nav-link">Timesheet</a>
-          <a href="/fill_timesheet" class="ts-nav-link">Fill Timesheet</a>\
+          <a href="/fill_timesheet" class="ts-nav-link">Fill Timesheet</a>
            <a href="/view_summary" class="ts-nav-link">View Summery</a>
         </div>
       </nav>
