--- a/templates/fill_timesheet.html
+++ b/templates/fill_timesheet.html
@@ -34,7 +34,6 @@
           maxDate: "today",
      onChange: function (selectedDates) {
   const adjustedDates = selectedDates.map(date => {
-    // Adjust date as needed; for example, if you want to keep it in UTC
     return new Date(date.getTime() - (date.getTimezoneOffset() * 60000)); // Convert to UTC
   });
   
@@ -157,7 +156,7 @@
       <div class="ts-form-inline">
         <label for="datepicker">Select Dates:</label>
         <input type="text" id="datepicker" readonly />
-        <input type="" id="dates" name="dates" value="" />
+        <input type="hidden" id="dates" name="dates" value="" />
 
       <div class="ts-form-inline">
         <label for="duration_hours">Duration Hours:</label>
