--- a/static/css/timesheet/edit_entry.css
+++ b/static/css/timesheet/edit_entry.css
@@ -17,7 +17,7 @@
 }
 
 .ts-edit-form {
-  max-width: 500px;
+  max-width: fit-content;
   margin: 2rem auto; /* Center the form with top/bottom margin */
   padding: 2rem;
   border: 1px solid #dee2e6; /* Light gray border */
