--- a/templates/view_summary.html
+++ b/templates/view_summary.html
@@ -53,7 +53,7 @@
               <th class="ts-summary-header">Billable</th>
               <th class="ts-summary-header">Admin</th>
               <th class="ts-summary-header">Training</th>
-              <th class="ts-summary-header">Non-billable</th>
+              <!-- <th class="ts-summary-header">Non-billable</th> -->
               <th class="ts-summary-header">Unavailable Time</th>
               <th class="ts-summary-header">Total Time</th>
             </tr>
@@ -77,7 +77,7 @@
               <td class="ts-summary-data">
                 {{ details['nonbillable_training_time'] }}
               </td>
-              <td class="ts-summary-data">{{ details['non-billable'] }}</td>
+              <!-- <td class="ts-summary-data">{{ details['non-billable'] }}</td> -->
               <td class="ts-summary-data">{{ details['unavailable_time'] }}</td>
               <td class="ts-summary-data">{{ details['total_time'] }}</td>
             </tr>
