--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,9 +26,19 @@
             
             <a class="navbar-link" href="/home">Home</a>
             <a class="navbar-link" href="/logout">Logout</a>
-            <a class="navbar-link-name" href=""><span>{{ fname }} {{ lname }}</span></a>
+            <div class="navInfo">
+              <a class="navbar-link-name" href=""><span>{{ fname }} {{ lname }}</span></a>
+              <div class="navInfoCard">
+                <div class="card-info-">Email<span></span></div>
+                <div class="card-info-"><span></span></div>
+                <div class="card-info-"><span></span></div>
+                <div class="card-info-"><span></span></div>
+                <div class="card-info-"><span></span></div>
+              </div>
+            </div>
           </div>
         </nav>
       </header>
 </body>
 </html>
+
