Nvabar hove Feature

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,11 +29,12 @@
             <div class="navInfo">
               <a class="navbar-link-name" href=""><span>{{ fname }} {{ lname }}</span></a>
               <div class="navInfoCard">
-                <div class="card-info-">Email<span></span></div>
-                <div class="card-info-"><span></span></div>
-                <div class="card-info-"><span></span></div>
-                <div class="card-info-"><span></span></div>
-                <div class="card-info-"><span></span></div>
+                <div class="card-info-">Email:<span></span></div>
+                <div class="card-info-">Employee id:<span>{{id}}</span></div>
+                <div class="card-info-">Role:<span> {{ role }}</span></div>
+                <div class="card-info-">Team:<span>{{ team }}</span></div>
+                <div class="card-info-">Manager:<span>  {{ managername }}</span></div>
+                
               </div>
             </div>
           </div>
