--- a/static/css/navbar/navbar.css
+++ b/static/css/navbar/navbar.css
@@ -86,16 +86,18 @@
 
 }
   .navInfoCard{
-    /* display: none; */
+    display: none;
     border: 1px solid black;
     margin-top: 30px;
     position: absolute;
     top:30px;
-    width: 150px;
-    right: 0;
+    width: 200px;
+    right: 15px;
     margin-right: 5px;
-    padding: 10px;
+    padding: 20px;
     background-color: aliceblue;
+    box-shadow: 2px 2px 10px 2px black;
+    border-radius: 3px;
   }
 
   .navInfo:hover{
