--- a/static/css/navbar/navbar.css
+++ b/static/css/navbar/navbar.css
@@ -91,11 +91,11 @@
     margin-top: 30px;
     position: absolute;
     top:30px;
-    width: 200px;
+    width: 180px;
     right: 15px;
-    margin-right: 5px;
+    margin-right: 15px;
     padding: 20px;
-    background-color: aliceblue;
+    background-color: whitesmoke;
     box-shadow: 2px 2px 10px 2px black;
     border-radius: 3px;
   }
@@ -106,7 +106,17 @@
        display:block;
     }
   }
+.card-info{
+  padding: 1px;
+  font-weight: 550;
 
+}
+.card-info span{
+  color: rgb(255, 0, 85);
+  padding: 1px;
+  font-weight: 450;
+}
+  
   @media screen and (max-width: 700px) {
     #navbar {
       position: static; 
