--- a/static/css/navbar/navbar.css
+++ b/static/css/navbar/navbar.css
@@ -1,137 +1,125 @@
+/* Navbar styling */
+#navbar {
+  --navbar-bg-color: whitesmoke;
+  --navbar-text-color: #666;
+  --navbar-text-color-focus: #fff;
+  --navbar-bg-contrast: rgb(255, 0, 85);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 64px;
+  background-color: var(--navbar-bg-color);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+  z-index: 99;
+}
 
-  /* Navbar styling */
-  #navbar {
-    --navbar-bg-color:whitesmoke;
-    --navbar-text-color-focus: #323232;
-    --navbar-text-color: #666;
-    --navbar-text-color-focus: #fff;
-    --navbar-bg-contrast: rgb(255, 0, 85);;
-    position: fixed;
-    height: 64px;
-    background-color: var(--navbar-bg-color);
-    left: 0;
-    right: 0;
-    top: 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
-    z-index: 99;
-  }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-    padding: 0 1.4rem;
-  }
-  
-  .home-link {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navbar-logo {
-    background-color: var(--navbar-text-color-focus);
-    border-radius: 50%;
-    width: 40px; /* Adjust size as needed */
-    height: 40px;
-    margin-right: 0.5em;
-  }
-  
-  
-  .navbar-logo img {
-    width: 50px; /* Adjust image size as needed */
-    margin-top: -0.42rem;
-    margin-left: -0.2rem;
-  }
-  
-  .navbar-links {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-  
-  .navbar-link {
-    color: var(--navbar-text-color);
-    text-decoration: none;
-    font-weight: 500;
-    padding: 10px 15px;
-    transition: background-color 0s ease;
-    
-  }
-  .navbar-link-name{
-    background-color: #666666c9;
-    color: #fff;
-    padding: 10px 15px;
-    border-radius: 15px;
-    text-decoration: none;
-  }
-  
-  .navbar-link:hover {
-    color: var(--navbar-text-color-focus);
-    background-color: var(--navbar-bg-contrast);
-    border-radius: 15px;
-    transition: 1ms;
-  }
-  
-  .navbar-emp_name {
-    background-color: var(--navbar-text-color);
-    color: var(--navbar-bg-color);
-    font-weight: 500;
-    padding: 5px 10px;
-    border-radius: 15px;
-  }
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  padding: 0 1.4rem;
+}
 
+.home-link {
+  display: flex;
+  align-items: center;
+}
 
-.navInfo{
+.navbar-logo {
+  background-color: var(--navbar-text-color-focus);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 0.5em;
+}
+
+.navbar-logo img {
+  width: 50px;
+  margin-top: -0.42rem;
+  margin-left: -0.2rem;
+}
+
+.navbar-links {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.navbar-link {
+  color: var(--navbar-text-color);
+  text-decoration: none;
+  border-radius: 15px;
+  font-weight: 500;
+  padding: 10px 15px;
+
+  transition: background-color 0.3s ease;
+  border-radius: 15px;
+}
+
+.navbar-link:hover {
+  color: var(--navbar-text-color-focus);
+  background-color: var(--navbar-bg-contrast);
+  transition: 1ms;
+}
+
+.navbar-link-name {
+  background-color: #666666c9;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 15px;
+  text-decoration: none;
+}
+
+.navInfo {
+  position: relative;
   color: black;
-
 }
-  .navInfoCard{
-    display: none;
-    border: 1px solid black;
-    margin-top: 30px;
-    position: absolute;
-    top:30px;
-    width: 180px;
-    right: 15px;
-    margin-right: 15px;
-    padding: 20px;
-    background-color: whitesmoke;
-    box-shadow: 2px 2px 10px 2px black;
-    border-radius: 3px;
-  }
 
-  .navInfo:hover{
-   
-   .navInfoCard{
-       display:block;
-    }
-  }
-.card-info{
-  padding: 1px;
+.navInfoCard {
+  display: none;
+  border: 1px solid black;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  width: 180px;
+  padding: 20px;
+  background-color: whitesmoke;
+  box-shadow: 2px 2px 10px 2px black;
+  border-radius: 3px;
+  z-index: 100;
+}
+
+.navInfo.active .navInfoCard {
+  display: block;
+}
+
+.card-info {
+  padding: 5px 0;
   font-weight: 550;
-
 }
-.card-info span{
+
+.card-info span {
   color: rgb(255, 0, 85);
-  padding: 1px;
   font-weight: 450;
 }
-  
-  @media screen and (max-width: 700px) {
-    #navbar {
-      position: static; 
-    }
-  
-    .navbar-links {
-      flex-direction: column; 
-      gap: 10px; 
-    }
+
+@media screen and (max-width: 700px) {
+  #navbar {
+    position: static;
   }
 
+  .navbar-links {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
 
+.navInfo:hover .navInfoCard {
+  display: block;
+}
 
-
-
-
-
-  
+.navInfo.active .navInfoCard {
+  display: block;
+}
